Fixed when missing '/' in url

--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "url": "git://github.com:madslundt/node-couchpotato.git"
   },
   "homepage" : "https://github.com/madslundt/node-couchpotato",
+  "dependencies": {
+    "q": "~0.8.12",
+    "querystring": "~0.2.0",
+    "util": "~0.10.0",
+    "url": "~0.7.9",
+    "request": "~2.9.203"
+  },
   "license": "GPL v2",
   "bugs": {
     "url": "https://github.com/madslundt/node-couchpotato/issues"
