Added search function

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "movies",
     "api"
   ],
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "lib/couchpotato.js",
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/madslundt/node-couchpotato",
   "dependencies": {
-  	"q": "~0.8.12",
-    "request": "~2.53"
+  	"q": "1.2.0",
+    "request": "2.53.0"
   },
   "license": "GPL v2",
   "bugs": {
